# my_python_project_template

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create-command.sh
docker/: Dockerfile  build.sh  common.sh  requirements-freeze.txt  run.sh
docker/etc/: pip.conf
src/python_package/: my_math.py
tests/: test_methods.py
