[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "example-project"
version = "0.1.0"
description = "An example project with Flit, Ruff, and pre-commit"
authors = [
    { name="Author Name", email="author@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pyproject-pre-commit",
    "pre-commit",
]

[tool.flit.module]
name = "python_package"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py38"

include = [
    "src/**/*.py",
    "tests/**/*.py",
    "scripts/**/*.py"
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
files = "src/**/*.py"
strict = true
warn_return_any = false
scripts_are_modules = true
install_types = true
non_interactive = true

